Initial proof of concept of Open File dialog
Quick file search now opens up a dialog which displays files in a clearer display

--- a/src/VsChromium/Resources.resx
+++ b/src/VsChromium/Resources.resx
@@ -123,4 +123,7 @@
   <data name="CodeSearchToolWindowTitle" xml:space="preserve">
     <value>Code Search</value>
   </data>
+  <data name="OpenFileToolWindowTitle" xml:space="preserve">
+    <value>Open File</value>
+  </data>
 </root>
